// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article should render without errors 1`] = `
<Fragment>
  <Navbar
    profileUrl=""
  />
  <div
    className="article-container"
    data-test="article"
  >
    <div
      className="sidebar author"
    >
      <div
        className="fixed-pos"
      >
        <Author />
      </div>
    </div>
    <div
      className="main-content"
    >
      <Item>
        <Title
          className="title-xl lh-4"
        />
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "height": "1.5rem",
              "marginBottom": "1rem",
            }
          }
        >
          <span>
            a few seconds ago
          </span>
          <span
            style={
              Object {
                "margin": "-.5rem 1rem 0",
              }
            }
          >
            .
          </span>
          <span>
             mins read
          </span>
        </div>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "start",
              "margingBottom": "2rem",
            }
          }
        />
        <ItemContent>
          <ItemImage
            size="massive"
          />
          <br />
          <ItemDescription>
            <div
              className="article-body"
            />
          </ItemDescription>
          <div
            className="report-rate-container"
          >
            <div
              className="rate-inner"
            >
              <div
                className="mini-author hide-lg"
              />
              <div>
                <Button
                  className="btn-transparent hide-sm"
                  type="button"
                  value=""
                >
                  <Icon
                    as="i"
                    color="black"
                    name="flag"
                    size="big"
                  />
                </Button>
              </div>
            </div>
            <div
              className="rate"
            >
              <p
                style={
                  Object {
                    "fontSize": ".875rem",
                    "lineHeight": ".825rem",
                  }
                }
              >
                Rate this article
              </p>
              <div
                className="d-flex"
              >
                <Button
                  className="btn-transparent"
                  type="button"
                  value=""
                >
                  <Icon
                    as="i"
                    color="black"
                    name="star"
                    size="big"
                  />
                </Button>
                <Button
                  className="btn-transparent"
                  type="button"
                  value=""
                >
                  <Icon
                    as="i"
                    color="black"
                    name="star"
                    size="big"
                  />
                </Button>
                <Button
                  className="btn-transparent"
                  type="button"
                  value=""
                >
                  <Icon
                    as="i"
                    color="black"
                    name="star"
                    size="big"
                  />
                </Button>
                <Button
                  className="btn-transparent"
                  type="button"
                  value=""
                >
                  <Icon
                    as="i"
                    color="black"
                    name="star"
                    size="big"
                  />
                </Button>
                <Button
                  className="btn-transparent"
                  type="button"
                  value=""
                >
                  <Icon
                    as="i"
                    color="black"
                    name="star outline"
                    size="big"
                  />
                </Button>
              </div>
            </div>
          </div>
        </ItemContent>
      </Item>
    </div>
    <div
      className="sidebar actions justify-content-center"
    >
      <div
        className="fixed-pos"
      />
    </div>
  </div>
  <div
    className="footer"
  >
    <div>
      <Button
        className="btn-transparent"
        type="button"
        value=""
      >
        <Icon
          as="i"
          color="black"
          name="flag"
          size="big"
        />
      </Button>
    </div>
    <div
      className="d-flex"
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div
        className="mr-auto"
      >
        <Button
          className="btn-transparent"
          type="button"
          value=""
        >
          <Icon
            as="i"
            color="black"
            name="thumbs up outline"
            size="big"
          />
        </Button>
      </div>
      <div
        className="mr-auto"
      >
        <Modal
          centered={true}
          closeIcon={true}
          closeOnDimmerClick={true}
          closeOnDocumentClick={false}
          dimmer={true}
          eventPool="Modal"
          size="tiny"
          trigger={
            <Button
              className="btn-transparent"
              type="button"
              value=""
            >
              <Icon
                as="i"
                color="black"
                name="share"
                size="big"
              />
            </Button>
          }
        >
          <ModalHeader>
            Share this Article!
          </ModalHeader>
          <ModalContent>
            <div
              className="share-cta"
            >
              <a
                className="links"
                href="https://twitter.com/intent/tweet?text=undefined&url=http://localhost/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <Icon
                  as="i"
                  name="twitter"
                  size="big"
                />
              </a>
              <a
                className="links"
                href="mailto:''?subject=undefined&body=http://localhost/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <Icon
                  as="i"
                  color="red"
                  name="mail"
                  size="big"
                />
              </a>
              <a>
                <Icon
                  as="i"
                  name="facebook"
                  size="big"
                />
              </a>
            </div>
          </ModalContent>
        </Modal>
      </div>
      <div
        className=""
      >
        <Button
          className="btn-transparent"
          type="button"
          value=""
        >
          <Icon
            as="i"
            color="black"
            name="bookmark"
            size="big"
          />
        </Button>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Article should render without errors 2`] = `
<Fragment>
  <Loader
    size="large"
    text="loading, please wait"
  />
  <Navbar
    profileUrl=""
  />
  <div
    className="article-container"
    data-test="article"
  >
    <div
      className="sidebar author"
    >
      <div
        className="fixed-pos"
      >
        <Author />
      </div>
    </div>
    <div
      className="main-content"
    >
      <Item>
        <Title
          className="title-xl lh-4"
        />
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "height": "1.5rem",
              "marginBottom": "1rem",
            }
          }
        >
          <span>
            a few seconds ago
          </span>
          <span
            style={
              Object {
                "margin": "-.5rem 1rem 0",
              }
            }
          >
            .
          </span>
          <span>
             mins read
          </span>
        </div>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "start",
              "margingBottom": "2rem",
            }
          }
        />
        <ItemContent>
          <ItemImage
            size="massive"
          />
          <br />
          <ItemDescription>
            <div
              className="article-body"
            />
          </ItemDescription>
          <div
            className="report-rate-container"
          >
            <div
              className="rate-inner"
            >
              <div
                className="mini-author hide-lg"
              />
              <div>
                <Button
                  className="btn-transparent hide-sm"
                  type="button"
                  value=""
                >
                  <Icon
                    as="i"
                    color="black"
                    name="flag"
                    size="big"
                  />
                </Button>
              </div>
            </div>
            <div
              className="rate"
            >
              <p
                style={
                  Object {
                    "fontSize": ".875rem",
                    "lineHeight": ".825rem",
                  }
                }
              >
                Rate this article
              </p>
              <div
                className="d-flex"
              >
                <Button
                  className="btn-transparent"
                  type="button"
                  value=""
                >
                  <Icon
                    as="i"
                    color="black"
                    name="star"
                    size="big"
                  />
                </Button>
                <Button
                  className="btn-transparent"
                  type="button"
                  value=""
                >
                  <Icon
                    as="i"
                    color="black"
                    name="star"
                    size="big"
                  />
                </Button>
                <Button
                  className="btn-transparent"
                  type="button"
                  value=""
                >
                  <Icon
                    as="i"
                    color="black"
                    name="star"
                    size="big"
                  />
                </Button>
                <Button
                  className="btn-transparent"
                  type="button"
                  value=""
                >
                  <Icon
                    as="i"
                    color="black"
                    name="star"
                    size="big"
                  />
                </Button>
                <Button
                  className="btn-transparent"
                  type="button"
                  value=""
                >
                  <Icon
                    as="i"
                    color="black"
                    name="star outline"
                    size="big"
                  />
                </Button>
              </div>
            </div>
          </div>
        </ItemContent>
      </Item>
    </div>
    <div
      className="sidebar actions justify-content-center"
    >
      <div
        className="fixed-pos"
      />
    </div>
  </div>
  <div
    className="footer"
  >
    <div>
      <Button
        className="btn-transparent"
        type="button"
        value=""
      >
        <Icon
          as="i"
          color="black"
          name="flag"
          size="big"
        />
      </Button>
    </div>
    <div
      className="d-flex"
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div
        className="mr-auto"
      >
        <Button
          className="btn-transparent"
          type="button"
          value=""
        >
          <Icon
            as="i"
            color="black"
            name="thumbs up outline"
            size="big"
          />
        </Button>
      </div>
      <div
        className="mr-auto"
      >
        <Modal
          centered={true}
          closeIcon={true}
          closeOnDimmerClick={true}
          closeOnDocumentClick={false}
          dimmer={true}
          eventPool="Modal"
          size="tiny"
          trigger={
            <Button
              className="btn-transparent"
              type="button"
              value=""
            >
              <Icon
                as="i"
                color="black"
                name="share"
                size="big"
              />
            </Button>
          }
        >
          <ModalHeader>
            Share this Article!
          </ModalHeader>
          <ModalContent>
            <div
              className="share-cta"
            >
              <a
                className="links"
                href="https://twitter.com/intent/tweet?text=undefined&url=http://localhost/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <Icon
                  as="i"
                  name="twitter"
                  size="big"
                />
              </a>
              <a
                className="links"
                href="mailto:''?subject=undefined&body=http://localhost/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <Icon
                  as="i"
                  color="red"
                  name="mail"
                  size="big"
                />
              </a>
              <a>
                <Icon
                  as="i"
                  name="facebook"
                  size="big"
                />
              </a>
            </div>
          </ModalContent>
        </Modal>
      </div>
      <div
        className=""
      >
        <Button
          className="btn-transparent"
          type="button"
          value=""
        >
          <Icon
            as="i"
            color="black"
            name="bookmark"
            size="big"
          />
        </Button>
      </div>
    </div>
  </div>
</Fragment>
`;
